--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: iris_route
-description: A new Flutter project.
-version: 0.0.2
+description: A package for routing and navigation.
+version: 0.0.1
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
@@ -11,10 +11,11 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_lints: ^2.0.1
+  lints: ^2.0.1
+  test: ^1.24.1
 
 
 flutter:
+
 
